--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=back-end-Journey
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/back-end-Journey?useSSL=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/journeybs?useSSL=false&serverTimeZone=UTC
+
+#bdjpa es el nombre de la base de datos
 
 spring.datasource.username=root
 spring.datasource.password=
