--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=back-end-Journey
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bdjpa?useSSL=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/journey_database_prueba?useSSL=false&serverTimeZone=UTC
 
 #bdjpa es el nombre de la base de datos
 
 spring.datasource.username=root
 spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Actualización del controlador JDBC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JWT
+jwt.secret=mi_secret_key
